test/parser/type/single_element_tuple_trailing_comma_error.myte
module test

type alias t = (Int,)